# FastApi

./: main.py  models.py  pyproject.toml  requirements.txt
