[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["khomich_valery <rafffik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
